# cloudcoder

./: .env.example  README.md  architecture.html  improvements.html  package.json
cloudcoder Rust/: CLAUDE.md  Cargo.toml  README.md
cloudcoder Rust/crates/cloudcoder-cli/: Cargo.toml
cloudcoder Rust/crates/cloudcoder-cli/src/: chat.rs  commands.rs  lib.rs  main.rs
cloudcoder Rust/crates/cloudcoder-cli/src/commands/: agent.rs  mod.rs
cloudcoder Rust/crates/cloudcoder-cli/src/coordinator/: mod.rs  notifications.rs  registry.rs  worker.rs
cloudcoder Rust/crates/cloudcoder-cli/src/tools/: bash_tool.rs  file_tool.rs  git_tool.rs  http_tool.rs  mod.rs  tool_registry.rs
cloudcoder Rust/crates/cloudcoder-core/: Cargo.toml
cloudcoder Rust/crates/cloudcoder-core/src/: error.rs  event.rs  lib.rs  types.rs
cloudcoder Rust/crates/cloudcoder-provider/: Cargo.toml
cloudcoder Rust/crates/cloudcoder-provider/src/: lib.rs  message.rs  ollama.rs  provider.rs  types.rs
cloudcoder Rust/crates/cloudcoder-services/: Cargo.toml
cloudcoder Rust/crates/cloudcoder-services/src/: event_bus.rs  health.rs  lazy.rs  lib.rs  rate_limiter.rs  telemetry.rs
cloudcoder Rust/crates/cloudcoder-services/src/cache/: disk.rs  memory.rs  mod.rs  service.rs
cloudcoder Rust/docs/superpowers/plans/: 2026-04-13-ollama-cloud-chat-plan.md
cloudcoder Rust/docs/superpowers/specs/: 2026-04-13-ollama-cloud-chat-design.md  2026-04-14-automatic-coordinator-detection-design.md  2026-04-14-coordinator-mode-design.md
docs/: advanced-setup.md
docs/superpowers/plans/: 2026-04-13-architecture-improvements.md  2026-04-22-searxng-integration.md
docs/superpowers/specs/: 2026-04-16-searxng-integration-design.md
python/: ollama_provider.py
scripts/: build.ts
src/: commands.ts
src/cli/: update.ts
src/commands/host_websearch/: host_websearch.tsx  index.ts
src/commands/model/: model.tsx
src/commands/provider/: provider.tsx
src/components/: Feedback.tsx  StartupScreen.ts  StatusLine.tsx
src/constants/: promptIdentity.test.ts  prompts.ts  system.ts
src/entrypoints/: cli.tsx
src/services/: searxng.ts
src/services/cache/: CacheService.test.ts  CacheService.ts  DiskCache.test.ts  DiskCache.ts  FileWatcherCache.test.ts  FileWatcherCache.ts  MemoryCache.test.ts  MemoryCache.ts  index.ts  types.ts
src/services/compact/: compact.ts  parallelCompact.test.ts  parallelCompact.ts  prompt.ts
src/services/health/: HealthMonitor.test.ts  HealthMonitor.ts
src/services/rate-limiter/: RateLimiter.test.ts  RateLimiter.ts
src/services/telemetry/: TelemetryService.test.ts  TelemetryService.ts
src/types/: core.ts  events.ts  message.ts
src/utils/: analyzeContext.ts  attribution.ts  buildConfig.ts  context.ts  gracefulShutdown.ts  http.ts  ollamaCloud.test.ts  ollamaCloud.ts  providerDiscovery.ts  providerFlag.ts  sqliteAdapter.test.ts  sqliteAdapter.ts
src/utils/events/: EventBus.ts  (+2 more)
(+10 files in other folders)
