[workspace]
resolver = "2"
members = [
    "crates/cloudcoder-core",
    "crates/cloudcoder-services",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
cloudcoder-core = { path = "crates/cloudcoder-core" }
cloudcoder-services = { path = "crates/cloudcoder-services" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
bincode = "1"