[package]
name = "cloudcoder-provider"
version.workspace = true
edition.workspace = true

[dependencies]
cloudcoder-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
futures-util = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"