[package]
name = "cloudcoder-services"
version.workspace = true
edition.workspace = true

[dependencies]
cloudcoder-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
bincode = { workspace = true }